Added New ITems
Updated Projects

--- a/index.html
+++ b/index.html
@@ -119,38 +119,58 @@
 										  </div>
 										  <hr>
 									  </div>
-										<div class="accordion-item" id="question3">
-										  <a class="accordion-link" href="#question3">
-											<div class="flex">
-											  <h3>FRONTEND DEVELOPMENT</h3>
-											  <ul >
-												<li>#Figma</li>
-											  </ul>
-											</div>
-											<i class="icon ion-md-arrow-forward"></i>
-											<i class="icon ion-md-arrow-down"></i>
-										  </a>
-										  <div class="answer">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+									  <div class="accordion-item" id="question3">
+										<a class="accordion-link" href="#question3">
+										  <div class="flex">
+											  <div class="col">
+												  <h3>Malaysia Tourism Forecasting</h3> 
+											  </div>
+											  <div class="col text-right">
+												  <ul>
+													  <li>Forecasting How Much Revenue Lost due to Covid-19 from Tourism Sector</li>
+												  </ul>
+											  </div>
 										  </div>
-										  <hr>
-									  </div>
-										<div class="accordion-item" id="question4">
-										  <a class="accordion-link" href="#question4">
-											<div>
-											  <h3>BACKEND DEVELOPMENT</h3>
-											  <ul>
-												<li>#Figma</li>
-											  </ul>
-											</div>
-											<i class="icon ion-md-arrow-forward"></i>
-											<i class="icon ion-md-arrow-down"></i>
-										  </a>
-										  <div class="answer">
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.</p>
+										  <i class="icon ion-md-arrow-forward"></i>
+										  <i class="icon ion-md-arrow-down"></i>
+										</a>
+										<div class="answer">
+										  <p> Covid-19 has impacted a lot in the tourism sector and Malaysia is left unspared. This report using past data to see how much revenue lost by using ARIMA, ETS and simple methods to see approximate losses. </p>
+										  <div>
+												  <a class="pdfhover" href= Files/ForecastingMalaysiaTourism.pdf><center> click here to view the full report
+												  <iframe src="Files/ForecastingMalaysiaTourism.pdf#scrollbar=0#toolbar=0" width="450px" height="150px"  /></center></iframe>
+												  </a>
+												  </div>
+										  </p>
+										</div>
+										<hr>
+									</div>
+									<div class="accordion-item" id="question4">
+										<a class="accordion-link" href="#question4">
+										  <div class="flex">
+											  <div class="col">
+												  <h3>Finance Dashboards</h3> 
+											  </div>
+											  <div class="col text-right">
+												  <ul>
+													  <li>Creating a dashboards of Performance, Cashflows and Invoices dashboards</li>
+												  </ul>
+											  </div>
 										  </div>
-										  <hr>
-									  </div>
+										  <i class="icon ion-md-arrow-forward"></i>
+										  <i class="icon ion-md-arrow-down"></i>
+										</a>
+										<div class="answer">
+										  <p> The key of this project is to provide the finance team a dynamic dashboards that allow automatic updates, filter and visualization of the Financial performance, Cashflows and Invoices. Therefore it allows the team to work more efficient. </p>
+										  <div>
+												  <a class="pdfhover" href= Files/FinanceDashboard.pdf><center> click here to view the the dashboard
+												  <iframe src="Files/FinanceDashboard.pdf#scrollbar=0#toolbar=0" width="450px" height="150px"  /></center></iframe>
+												  </a>
+												  </div>
+										  </p>
+										</div>
+										<hr>
+									</div>
 									 </div>
 									</div>
 								  </section>
@@ -441,6 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
+						<p class="copyright">&copy; This site is still under-construction. and self-maintained (re-designed by me :( )</p>
 						<p class="copyright">&copy; Eccel Gunawan </p><p class ="copyright">Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
