--- a/index.html
+++ b/index.html
@@ -180,14 +180,30 @@
 						<!-- experiences -->
 							<article id="experiences">
 								<h2 class="major">experiences</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h3> Photobook Worldwide Sdn.Bhd.</h3>
+								<span class="image main"><img src="images/PBWW.jpg" alt="" /></span>
+								<p>Intern as Performance Marketing. (Nov 2021-Feb 2022)</br>
+									<ul>
+										<li>Created VBA code to automate affiliate commission validation</li>
+										<li>Successfully seal deals with multiple new affiliates within 3 weeks.</li>
+										<li>Identified and resolved in database efficiency and procedures</li>
+										<li>Optimizing Facebook ads and affiliate performance</li>
+										<li>Performing analysis and analytics such as classification and regression to gain insights on products, affiliate performance and campaigns.</li>
+									</ul>
+								</br>
+								Interning as social media and Marketing KOL. (Dec 2020-Feb 2021)</br>
+								<ul>
+									<li>Implemented Semi-automated company KOL database entry and system</li>
+									<li>Identifying and engaging to multi-level influencers in various platform such as Instagram and TikTok</li>
+									<li>Content-creating across company social media platform</li>
+								</ul>
+								</p>
 							</article>
 
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="mailto:eccelwei@gmail.com" enctype=”multipart/form-data”>
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
