--- a/index.html
+++ b/index.html
@@ -171,6 +171,31 @@
 										</div>
 										<hr>
 									</div>
+									<div class="accordion-item" id="question5">
+										<a class="accordion-link" href="#question5">
+											<div class="flex">
+												<div class="col">
+													<h3>Titanic Python Project</h3>
+												</div>
+												<div class="col text-right">
+													<ul>
+														<li>First machine learning using Python</li>
+													</ul>
+												</div>
+											</div>
+											<i class="icon ion-md-arrow-forward"></i>
+											<i class="icon ion-md-arrow-down"></i>
+										</a>
+									  <div class="answer">
+										<p> This is a personal project that I conducted without supervision. The goal of this project is to predict which kind of passanger that would survive on the horrible accident.</p>
+										<div>
+												<a href= https://drive.google.com/file/d/1gWOUPX24I71R2NoLgW6FjTs0gAsasj-w/view?usp=sharing><center> click here to view the Code
+												</a>
+												</div>
+										</p>
+									  </div>
+									  <hr>
+								  </div>
 									 </div>
 									</div>
 								  </section>
