--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									  <div class="answer">
 										<p> This is a personal project that I conducted without supervision. The goal of this project is to predict which kind of passanger that would survive on the horrible accident.</p>
 										<div>
-												<a href= https://drive.google.com/file/d/1gWOUPX24I71R2NoLgW6FjTs0gAsasj-w/view?usp=sharing><center> click here to view the Code
+												<a href= "Files/Titanic.html"><center> click here to view the Code
 												</a>
 												</div>
 										</p>
