--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 									  <div class="answer">
 										<p> This is a personal project that I conducted without supervision. The goal of this project is to predict which kind of passanger that would survive on the horrible accident.</p>
 										<div>
-												<a href= "Files/Titanic.html"><center> click here to view the Code
+												<a href= "Files/Titanic.html"><center> click here to view the in your browser
 												</a>
 												</div>
 										</p>
