--- a/index.html
+++ b/index.html
@@ -196,6 +196,31 @@
 									  </div>
 									  <hr>
 								  </div>
+								  <div class="accordion-item" id="question6">
+									<a class="accordion-link" href="#question6">
+										<div class="flex">
+											<div class="col">
+												<h3>Monkeypox Tableau Dashboard</h3>
+											</div>
+											<div class="col text-right">
+												<ul>
+													<li>Visualizing Monkeypox with Tableau</li>
+												</ul>
+											</div>
+										</div>
+										<i class="icon ion-md-arrow-forward"></i>
+										<i class="icon ion-md-arrow-down"></i>
+									</a>
+								  <div class="answer">
+									<p> A tableau project on Visualizing the 2nd upcoming global pandemic : Monkeypox</p>
+									<div>
+										<iframe seamless="" frameborder="0" src="
+											https://public.tableau.com/views/2021W15FoulsCalledByNBAReferees_16183828654490/MM2021W15?:language=en&amp;:display_count=y&amp;publish=yes&amp;:origin=viz_share_link" width="100%" height="800" scrolling="yes">
+										</iframe>
+									</p>
+								  </div>
+								  <hr>
+							  </div>
 									 </div>
 									</div>
 								  </section>
