--- a/index.html
+++ b/index.html
@@ -220,8 +220,36 @@
 									</p>
 								  </div>
 								  <hr>
-							  </div>
-									 </div>
+							  		</div>
+								</div>
+
+									 <div class="accordion-item" id="question7">
+										<a class="accordion-link" href="#question7">
+											<div class="flex">
+												<div class="col">
+													<h3>SQL Restaurant and Library Project</h3>
+												</div>
+												<div class="col text-right">
+													<ul>
+														<li>First Guided SQL project</li>
+													</ul>
+												</div>
+											</div>
+											<i class="icon ion-md-arrow-forward"></i>
+											<i class="icon ion-md-arrow-down"></i>
+										</a>
+									  <div class="answer">
+										<p> This is a personal project that I conducted With supervision. The goal of this project is to learn on SUID in SQL</p>
+										<div>
+											<a class="pdfhover" href= Files/RestaurantandLibrarySQLQuery.pdf><center> click here to view the full query
+												<iframe src="Files/RestaurantandLibrarySQLQuery.pdf#scrollbar=0#toolbar=0" width="450px" height="200px"  /></center></iframe>
+												</a>
+												</div>
+										</p>
+									  </div>
+									  <hr>
+								  </div>
+
 									</div>
 								  </section>
 								
